--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ crawlingnews/NULL/txt
 export/
 mentions/
 merge/
-!*.media.merge.csv
+!merge/NULL/*.media.merge.csv
 
 helper/SQLite.log
 helper/SQLiteTest.db
