重构代码，减少重复爬取，加快速度

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ crawlingnews/NULL/txt
 
 export/
 mentions/
-merge/*/*.csv
-!merge/NULL/*.media.merge.csv
+merge/
 
 helper/SQLite.log
 helper/SQLiteTest.db
