--- a/crawlingnews/configs/yahoo.com.config.json
+++ b/crawlingnews/configs/yahoo.com.config.json
@@ -1,20 +1,20 @@
 {
-    "div_article": "div",
+    "div_article": "article",
     "div_attrs": {
-        "class" : "news"
+        "class" : "caas-container"
     },
     "h_in": "True",
     "h_x": "h1",
     "h_attrs":{
-        "class": "news-header__title"
+
     },
     "a_x": "div",
     "a_attrs":{
-        "class" : "Page-authors"
+        "class" : "caas-attr-item-author"
     },
-    "t_x": "span",
+    "t_x": "div",
     "t_attrs":{
-        "class" : "ng-binding ng-scope"
+        "class" : "caas-attr-time-style"
     },
     "find_p": "p",
     "p_attrs":{
